--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
        <form id="numberSelect">
         <label for="number">Pick a number:</label>
-        <input type="number" id="chosenNumber" name="chosenNumber">
+        <input type="number" id="chosenNumber" name="chosenNumber" autofocus>
         <input type="button" id="submit" name="submit" value="Submit">
        </form>
       </div>
